# BuenzliCoin

./: CMakeLists.txt  README.md  blockchain.h  conanfile.py  conanfile.txt  hash.h  hasher.h  http_server.cc  http_server.h  main.cc  node.h  websocket_client.cc  websocket_client.h  websocket_server.cc  websocket_server.h
.github/workflows/: workflow.yml
buenzli/: buenzli.go
bwallet/: bwallet.go
config/: default.toml  proof_of_work_test.toml  transactions_test.toml
include/: blockchain.h  clock.h  config.h  difficulty.h  format.h  hash.h  json.h  log.h  nix.h  node.h  text.h  transaction.h  undo_helper.h  util.h  uuid.h
include/crypto/: digest.h  hash.h  keypair.h
include/web/: http_client.h  http_error.h  http_server.h  websocket_client.h  websocket_error.h  websocket_peer.h  websocket_server.h
src/: config.cc  log.cc  main.cc  node.cc  python.cc  transaction.cc
src/web/: http_client.cc  http_server.cc  websocket_client.cc  websocket_server.cc
test/integration/: blockchain_test.py  proof_of_work_test.py  single_node_test.py  transaction_test.py
test/integration/util/: blockchain.py  node.py
test/unit/: difficulty_test.cc  hash_test.cc
test/unit/crypto/: digest_test.cc  hash_test.cc  keypair_test.cc
test/unit/web/: http_test.cc  websocket_test.cc
test/web/: http_test.cc  websocket_test.cc
